# pyls

./: .gitignore  README.md  pyls.py  pyproject.toml  requirements-dev.txt
data/: filesystem.py  tree.py
pyls/: __main__.py
pyls/data/: filesystem.py  tree.py
pyls/utils/: formatters.py  io.py
test/: test_tree.py  utils.py
tests/: test_formatters.py  test_io.py  test_tree.py  utils.py
